--- a/public html/css/custom.css
+++ b/public html/css/custom.css
@@ -144,6 +144,10 @@ html, body {
   margin: 3%;
   padding: 2%;
   }
+.galleria img:hover{
+  width: 130%;
+  z-index:10000;
+  }
 #galleriasinistra {
   display: block;
   float: left;
