--- a/public html/css/mobile.css
+++ b/public html/css/mobile.css
@@ -7,36 +7,41 @@ html, body {
   }
   
   h1 {
-  font-size: 2.5em;
-  padding: 0.3em;
-  margin: 0.3em;
+  font-size: 4em;
+  padding: 0.5em;
+  margin: 0.5em;
   }
   
   h2 {
   text-align: center;
-  font-size: 2.1em;
-  padding: 0.3em auto;
-  margin: 0.3em auto;
+  font-size: 3.3em;
+  padding: 0.5em auto;
+  margin: 0.5em auto;
   }
   h3 {
   text-align: center;
-  font-size: 1.8em;
-  padding: 0.3em auto;
-  margin: 0.3em auto;
+  font-size: 2.1em;
+  padding: 0.45em auto;
+  margin: 0.45em auto;
+  }
+  
+  p {
+  line-height: 130%;
   }
 
 .header {
-  height: 75%;
+  height: 65%;
   background: url("../images/Sfondo.jpg") no-repeat center center;
   background-size: cover;
   }
   
 .header h1 {
+  color: white;
   position: absolute;
-  right: 3%;
+  right: 7%;
   bottom: 50%;
   font-family: "Pinyon Script";
-  font-size: 1.7em;
+  font-size: 3em;
   }
 
 .horizontalmenu {
@@ -44,8 +49,13 @@ html, body {
   text-align: center;
   list-style-type: none;
   margin: 0;
-  padding: 0.1em;
-  font-size: 1em;
+  padding: 0.005%;
+  font-size: 1.5em;
+  }
+  
+.horizontalmenu li {
+  margin: 0;
+  padding: 0;
   }
 
 .horizontalmenu li {
@@ -53,7 +63,7 @@ html, body {
   display: inline-block;
   zoom: 1;
   *display: inline;
-  padding: 0.01em 0.3em;  
+  padding: 0 1%;  
   }
   
 .horizontalmenu li a {
@@ -80,7 +90,7 @@ html, body {
   }
   
 .corpo img {
-  width: 100%;
+  width: 75%;
   }
 
 .corpo ul {
@@ -136,85 +146,45 @@ html, body {
   padding: 1%;  
   }
 
-.galleria {
+.galleriaverticale {
+  display: inline;
   text-align: center;
-  width: 90%;
-  margin: 3%;
-  padding: 2%;
-  }
-#galleriasinistra {
-  display: block;
-  float: left;
-  width: 64.67%;
-  margin: 1%;
-  padding: 1%;
-  moz-box-sizing: border-box;
-  webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  }
-#galleriasx {
-  float: left;
-  display: block;
-  width: 48%;
-  margin: 1%;
-  padding: 1%;
-  moz-box-sizing: border-box;
-  webkit-box-sizing: border-box;
-  box-sizing: border-box;
   }
 
-#galleriadx {
-  float: right;
-  display: block;
-  width: 48%;
-  margin: 1%;
-  margin-right: 0%;
-  padding: 1%; 
-  padding-right: 0%;
-  moz-box-sizing: border-box;
-  webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  }
-#galleriadestra {
-  display: block;
-  float: right;
-  width: 31.33%;
-  margin: 1%;
-  padding: 1%;
-  moz-box-sizing: border-box;
-  webkit-box-sizing: border-box;
-  box-sizing: border-box;
+.galleriaverticale img {
+  margin: 2% auto;
+  width: 28%;
   }
   
 .galleriaorizzontale {
+  display: inline;
+  text-align: center;
+  }
+
+.galleriaorizzontale img {
+  margin: 2% auto;
+  width: 42.2%;
+  }
+
+.formricetta {
   text-align: center;
   width: 90%;
   margin: 3%;
   padding: 2%;
-  }
+  } 
 
-#galleriaorsx {
-  display: block;
-  float: left;
-  width: 47%;
-  margin: 2%;
-  padding: 1%;
-  margin-left: 2%;
-  moz-box-sizing: border-box;
-  webkit-box-sizing: border-box;
-  box-sizing: border-box;
+.formricetta label {
+  display: inline;
+  margin: 4%;
   }
-
-#galleriaordx {
+    
+.formricetta input {
+  padding: 0.5%;
+  margin: 1%;
+  }    
+  
+.formricetta button {
   display: block;
-  float: right;
-  width: 46%;
-  margin: 2%;
-  padding: 1%;
-  margin-right: 1%;
-  moz-box-sizing: border-box;
-  webkit-box-sizing: border-box;
-  box-sizing: border-box;
   }
 
 .button {
@@ -257,12 +227,12 @@ html, body {
 
  #mappa {
   width: 100%;
-  height: 60%;
-  margin: 2em auto;
+  height: 100%;
+  margin: 4% auto;
   }
   #framemappa {
   width: 100%;
-  height: 95%;
+  height: 100%;
   margin: 0;
   padding: 0;
   }
@@ -272,8 +242,78 @@ html, body {
   clear: both;
   background-color: #DEB887;
   text-align: center;
-  font-size: 1em;
-  padding: 1em;
+  font-size: em;
+  padding: 1.5%;
+  }
+
+#check input {
+  display: none;
+  background: #FFDAB9;
+}
+
+label[for="check"] {
+  cursor: pointer;
+  color: red;
+  padding: 1% 8%;
+  font-weight: bold; 
+}
+
+input[for="check"] {
+  width: 30%;
+  }
+
+#selezione {
+ width: 90%; 
+ margin: 1.5%;
+ padding: 1.5%;
+ }
+
+ #selezione input {
+ margin-right: 3%;
+ margin-top: 2%;
+ }
+
+#selezione form {
+  visibility: hidden;
+  margin: 0.5%;
+  padding: 0.5%;
+}
+
+input#check:checked ~ form {
+  visibility: visible;
+}
+
+[for="check"] span:last-of-type {
+    display: none;
+    visibility: hidden;
+    
+}
+
+input[type=checkbox]:checked ~ [for="check"] span:last-of-type {
+    display: block;
+    visibility: visible;
+}
+
+input[type=checkbox]:checked ~ [for="check"] span:first-of-type {
+    display: none-inline;
+    visibility: hidden;
+}
+
+#nomeopinioni {
+  font-size: 1.75em;
+  font-weight: bold;
   }
   
+#info {
+  margin: 2.5%;
+  padding: 2.5%;
+  }
   
+#info {
+  margin: 2.5%;
+  padding: 2.5%;
+  } 
+
+.caricaimmagini {
+  display: block;
+  }
