--- a/public html/css/custom.css
+++ b/public html/css/custom.css
@@ -24,9 +24,13 @@ html, body {
   padding: 0.45em auto;
   margin: 0.45em auto;
   }
+  
+  p {
+  line-height: 130%;
+  }
 
 .header {
-  height: 100%;
+  height: 65%;
   background: url("../images/Sfondo.jpg") no-repeat center center;
   background-size: cover;
   }
@@ -35,7 +39,7 @@ html, body {
   color: white;
   position: absolute;
   right: 7%;
-  bottom: 7%;
+  bottom: 50%;
   font-family: "Pinyon Script";
   font-size: 3em;
   }
@@ -43,10 +47,15 @@ html, body {
 .horizontalmenu {
   background-color: #DEB887;
   text-align: center;
-  list-style-type: none;;
+  list-style-type: none;
   margin: 0;
-  padding: 0.1em;
+  padding: 0.005%;
   font-size: 1.5em;
+  }
+  
+.horizontalmenu li {
+  margin: 0;
+  padding: 0;
   }
 
 .horizontalmenu li {
@@ -54,8 +63,7 @@ html, body {
   display: inline-block;
   zoom: 1;
   *display: inline;
-  padding: 0.01em 0.5em;  
-  margin: 0;
+  padding: 0 1%;  
   }
   
 .horizontalmenu li a {
@@ -138,89 +146,24 @@ html, body {
   padding: 1%;  
   }
 
-.galleria {
+.galleriaverticale {
+  display: inline;
   text-align: center;
-  width: 90%;
-  margin: 3%;
-  padding: 2%;
-  }
-.galleria img:hover{
-  width: 130%;
-  z-index:10000;
-  }
-#galleriasinistra {
-  display: block;
-  float: left;
-  width: 64.67%;
-  margin: 1%;
-  padding: 1%;
-  moz-box-sizing: border-box;
-  webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  }
-#galleriasx {
-  float: left;
-  display: block;
-  width: 48%;
-  margin: 1%;
-  padding: 1%;
-  moz-box-sizing: border-box;
-  webkit-box-sizing: border-box;
-  box-sizing: border-box;
   }
 
-#galleriadx {
-  float: right;
-  display: block;
-  width: 48%;
-  margin: 1%;
-  margin-right: 0%;
-  padding: 1%; 
-  padding-right: 0%;
-  moz-box-sizing: border-box;
-  webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  }
-#galleriadestra {
-  display: block;
-  float: right;
-  width: 31.33%;
-  margin: 1%;
-  padding: 1%;
-  moz-box-sizing: border-box;
-  webkit-box-sizing: border-box;
-  box-sizing: border-box;
+.galleriaverticale img {
+  margin: 2% auto;
+  width: 28%;
   }
   
 .galleriaorizzontale {
+  display: inline;
   text-align: center;
-  width: 90%;
-  margin: 3%;
-  padding: 2%;
   }
 
-#galleriaorsx {
-  display: block;
-  float: left;
-  width: 47%;
-  margin: 2%;
-  padding: 1%;
-  margin-left: 2%;
-  moz-box-sizing: border-box;
-  webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  }
-
-#galleriaordx {
-  display: block;
-  float: right;
-  width: 46%;
-  margin: 2%;
-  padding: 1%;
-  margin-right: 1%;
-  moz-box-sizing: border-box;
-  webkit-box-sizing: border-box;
-  box-sizing: border-box;
+.galleriaorizzontale img {
+  margin: 2% auto;
+  width: 42.2%;
   }
 
 .formricetta {
@@ -299,80 +242,15 @@ html, body {
   clear: both;
   background-color: #DEB887;
   text-align: center;
-  font-size: 1em;
-  padding: 1em;
+  font-size: em;
+  padding: 1.5%;
   }
 
-#check input {
-  display: none;
-  background: #FFDAB9;
-}
-
-label[for="check"] {
-  cursor: pointer;
-  color: red;
-  padding: 1% 8%;
-  font-weight: bold; 
-}
-
-input[for="check"] {
-  width: 30%;
-  }
-
-#selezione {
- width: 90%; 
- margin: 1.5%;
- padding: 1.5%;
- }
-
- #selezione input {
- margin-right: 3%;
- margin-top: 2%;
- }
-
-#selezione form {
-  visibility: hidden;
-  margin: 0.5%;
-  padding: 0.5%;
-}
-
-input#check:checked ~ form {
-  visibility: visible;
-}
-
-[for="check"] span:last-of-type {
-    display: none;
-    visibility: hidden;
-    
-}
-
-input[type=checkbox]:checked ~ [for="check"] span:last-of-type {
-    display: block;
-    visibility: visible;
-}
-
-input[type=checkbox]:checked ~ [for="check"] span:first-of-type {
-    display: none-inline;
-    visibility: hidden;
-}
-
-#nomeopinioni {
-  font-size: 1.75em;
-  font-weight: bold;
-  }
-  
 #info {
   margin: 2.5%;
   padding: 2.5%;
   }
-  
-#info {
-  margin: 2.5%;
-  padding: 2.5%;
-  } 
 
 .caricaimmagini {
   display: block;
   }
-
-
