--- a/public html/css/mobile.css
+++ b/public html/css/mobile.css
@@ -4,44 +4,44 @@ html, body {
   height: 100%;
   font-family: "Quattrocento Sans";
   text-align: justify;
+  max-width: 2000px;
   }
   
   h1 {
-  font-size: 4em;
-  padding: 0.5em;
-  margin: 0.5em;
+  font-size: 3em;
+  padding: 3%;
+  margin: 3%;
   }
   
   h2 {
   text-align: center;
-  font-size: 3.3em;
-  padding: 0.5em auto;
-  margin: 0.5em auto;
+  font-size: 2em;
+  padding: 3% auto;
+  margin: 3% auto;
   }
   h3 {
   text-align: center;
-  font-size: 2.1em;
-  padding: 0.45em auto;
-  margin: 0.45em auto;
+  font-size: 1.8em;
+  padding: 0.3em auto;
+  margin: 0.3em auto;
   }
   
-  p {
-  line-height: 130%;
+  p, li {
+  line-height: 150%;
   }
 
 .header {
-  height: 65%;
+  height: 75%;
   background: url("../images/Sfondo.jpg") no-repeat center center;
   background-size: cover;
   }
   
 .header h1 {
-  color: white;
   position: absolute;
-  right: 7%;
+  right: 3%;
   bottom: 50%;
   font-family: "Pinyon Script";
-  font-size: 3em;
+  font-size: 2em;
   }
 
 .horizontalmenu {
@@ -49,13 +49,13 @@ html, body {
   text-align: center;
   list-style-type: none;
   margin: 0;
-  padding: 0.005%;
-  font-size: 1.5em;
+  padding: 3%;
+  font-size: 1em;
   }
-  
-.horizontalmenu li {
-  margin: 0;
+
+.horizontalmenu ul {
   padding: 0;
+  margin: 0;
   }
 
 .horizontalmenu li {
@@ -63,7 +63,7 @@ html, body {
   display: inline-block;
   zoom: 1;
   *display: inline;
-  padding: 0 1%;  
+  padding: 0 2%;  
   }
   
 .horizontalmenu li a {
@@ -85,12 +85,14 @@ html, body {
 
   
 .corpo p {
-  font-size: 1.2em;
+  font-size: 1em;
   text-align: center;
+  word-spacing: 0.3em;
+  line-height: 150%;
   }
   
 .corpo img {
-  width: 75%;
+  width: 100%;
   }
 
 .corpo ul {
@@ -166,27 +168,6 @@ html, body {
   width: 42.2%;
   }
 
-.formricetta {
-  text-align: center;
-  width: 90%;
-  margin: 3%;
-  padding: 2%;
-  } 
-
-.formricetta label {
-  display: inline;
-  margin: 4%;
-  }
-    
-.formricetta input {
-  padding: 0.5%;
-  margin: 1%;
-  }    
-  
-.formricetta button {
-  display: block;
-  }
-
 .button {
 	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #ffffff), color-stop(1, #f6f6f6));
 	background:-moz-linear-gradient(top, #ffffff 5%, #f6f6f6 100%);
@@ -227,12 +208,12 @@ html, body {
 
  #mappa {
   width: 100%;
-  height: 100%;
-  margin: 4% auto;
+  height: 60%;
+  margin: 2em auto;
   }
   #framemappa {
   width: 100%;
-  height: 100%;
+  height: 95%;
   margin: 0;
   padding: 0;
   }
@@ -242,78 +223,19 @@ html, body {
   clear: both;
   background-color: #DEB887;
   text-align: center;
-  font-size: em;
-  padding: 1.5%;
-  }
-
-#check input {
-  display: none;
-  background: #FFDAB9;
-}
-
-label[for="check"] {
-  cursor: pointer;
-  color: red;
-  padding: 1% 8%;
-  font-weight: bold; 
-}
-
-input[for="check"] {
-  width: 30%;
-  }
-
-#selezione {
- width: 90%; 
- margin: 1.5%;
- padding: 1.5%;
- }
-
- #selezione input {
- margin-right: 3%;
- margin-top: 2%;
- }
-
-#selezione form {
-  visibility: hidden;
-  margin: 0.5%;
-  padding: 0.5%;
-}
-
-input#check:checked ~ form {
-  visibility: visible;
-}
-
-[for="check"] span:last-of-type {
-    display: none;
-    visibility: hidden;
-    
-}
-
-input[type=checkbox]:checked ~ [for="check"] span:last-of-type {
-    display: block;
-    visibility: visible;
-}
-
-input[type=checkbox]:checked ~ [for="check"] span:first-of-type {
-    display: none-inline;
-    visibility: hidden;
-}
-
-#nomeopinioni {
-  font-size: 1.75em;
-  font-weight: bold;
+  font-size: 0.9em;
+  padding: 5%;
   }
   
-#info {
-  margin: 2.5%;
-  padding: 2.5%;
-  }
-  
-#info {
-  margin: 2.5%;
-  padding: 2.5%;
-  } 
-
-.caricaimmagini {
+#formopinioni label, input {
+  text-align: center;
+  margin: 2% auto;
   display: block;
   }
+
+#formricette label, input {
+  text-align: center;
+  margin: 2% auto;
+  display: block;
+  }
+  
