--- a/public html/css/custom.css
+++ b/public html/css/custom.css
@@ -51,7 +51,7 @@ html, body {
   text-align: center;
   list-style-type: none;
   margin: 0;
-  padding: 1em;
+  padding: 1em 0 1em 0;
   font-size: 1.5em;
   }
   
